implement participation endpoints
